# a4keyboard-rs

./: .gitignore  Cargo.toml  README.md  build.rs
hrd/: Cargo.toml  README.md
hrd/src/: descriptor.rs  lib.rs  parser.rs  report.rs
src/: color.rs  devices.rs  lib.rs  utils.rs
src/bpf/: vmlinux.h  write.bpf.c
src/devices/: bloody.rs
