[package]
name = "a4keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["hrd", "."]

[workspace.dependencies]
clap = { version = "4.5.13" }
libbpf-rs = "0.24.1"
once_cell = "1.19.0"
rand = "0.8.5"
log = "0.4.22"
thiserror = "1.0.63"
libbpf-cargo = "0.24.1"
hrd = { path = "hrd" }

[features]
default = ["disco"]
disco = ["rand"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
libbpf-rs = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
rand = { workspace = true, optional = true }
thiserror = { workspace = true }
hrd = { workspace = true }
env_logger = "0.11.5"

[build-dependencies]
libbpf-cargo = { workspace = true }
